fix bug on mobile add De with alert modal

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -162,3 +162,7 @@ input {
 .btn-outline-secondary:active:focus {
 	box-shadow: 0 0 0 0.25rem rgb(229 229 229 / 50%);
 }
+
+.display-5 {
+	word-break: break-word;
+}
